ws: refresh scaffold-managed docs and local build config for ike-parent 176
Refs: IKE-Network/ike-issues#1081