@@ -1,3 +1,34 @@
+# komet-grpc-plugin
+
+gRPC-backed datastore and search provider for Komet
+
+## Build Standards
+
+Files in `.claude/standards/` are build artifacts unpacked from `ike-build-standards`. DO NOT edit or commit them. See the workspace root CLAUDE.md for details.
+
+## Build
+
+```bash
+mvn clean verify -DskipTests -T 1C
+```
+
+## Key Facts
+
+- GroupId: `network.ike.komet`
+- Version: `5-SNAPSHOT`
+- Uses `--enable-preview` (Java 25)
+- BOM: imports `dev.ikm.ike:ike-bom` for dependency version management
+
+## Prohibited Patterns
+
+- **Never use `maven-antrun-plugin`** — use a proper Maven goal or `exec-maven-plugin`
+- **Never use `build-helper-maven-plugin` for multi-execution property chaining** —
+  write a proper Maven goal in `ike-maven-plugin`
+- **Never embed shell commands inline in POM** — extract to a named script
+
+See `.claude/standards/` (after `mvn validate`) for full standards.
+See `CLAUDE-komet-grpc-plugin.md` for project-specific notes.
+
 <!-- BEGIN ike-managed: standards-pointer -->
 
 ## IKE Build Standards
